<resources>
    <string name="app_name">Wasder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_live">Live</string>
    <string name="title_messages">Messages</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_register">Register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="creators_feed_title">Title</string>
    <string name="creator">Creator</string>
    <string name="creator_description">Description</string>
    <string name="bookmark_button_description">bookmark button</string>
    <string name="comment_button_description">comment button</string>
    <string name="like_button_description">like button</string>
    <string name="share_button_description">share button</string>
    <string name="creator_avatar_description">creator avatar</string>
    <string name="creator_event_photo_description">creator event photo</string>
    <string name="play_button_description">play button</string>
    <string name="image_description">image description</string>
    <string name="cardView_supplementary_text">Card gutters and margins may vary on larger screen sizes, as long as they follow Material Design 8dp grid. Card margins and gutters can be 8, 16, 24, or 40dp wide. Everything encompasses many things, like all stuf there is! But think of it, like can it include really everything!! Even whatever shall ever exist!</string>
    <string name="subhead">Subhead</string>
    <string name="title">Title</string>
    <string name="chat_message">TextView</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="event">Event</string>
    <string name="content">Content</string>
    <string name="nav_header_name">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="id">id</string>
    <string name="nav_action_profile">Profile</string>
    <string name="nav_action_settings">Settings</string>
    <string name="feed_fragment_tag">FeedFragment</string>
    <string name="creators_fragment_tag">CreatorsFragment</string>
    <string name="groups_fragment_tag">GroupsFragment</string>
    <string name="twitch_stream_fragment_tag">TwitchStreamFragment</string>
    <string name="twitch_live_fragment_tag">TwitchLiveFragment</string>
    <string name="esports_fragment_tag">EsportsFragment</string>
    <string name="events_fragment_tag">EventsFragment</string>
    <string name="recommended_events_fragment_tag">RecommendedFragment</string>
    <string name="friends_events_fragment_tag">FriendsEventsFragment</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="feed_sheet_title">Your Next Event</string>
    <string name="feed_sheet_next_event_name">Wizzer\'s Game Jam!</string>
    <string name="bottom_sheet_market_button">Market</string>
    <string name="bottom_sheet_calendar_button">Calendar</string>
    <string name="feed_sheet_event_time_data">8:00 PM, Oct 26 (3d 23h 14m)</string>
    <string name="action_center">Action Center</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_marketitem_list">MarketItems</string>
    <string name="title_marketitem_detail">MarketItem Detail</string>
    <string name="title_profile">Profile</string>
    <string name="nav_action_friends">Friends</string>
    <string name="nav_action_followers">Followers</string>
    <string name="nav_action_achievements">Achievements</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="dialog_confirm_button">Confirm</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="host_cool_gamer">Host: Cool Gamer</string>
    <string name="dota_gameplay">DOTA GAMEPLAY</string>
    <string name="saturday_oct_25_2017">Saturday, Oct 25 2017</string>
    <string name="_02_00_pm_05_30_pm">02:00 PM - 05:30 PM</string>
    <string name="_250_wasderz">250 Wasderz</string>
</resources>