<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_open_action_center"
        android:icon="@drawable/ic_center_focus_strong_black_24dp"
        android:iconTint="@android:color/white"
        android:orderInCategory="100"
        android:title="@string/action_center"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_outout"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never"/>
</menu>
