<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.AppCompat.Dialog"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dota_gameplay"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/imageButton2"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/host_cool_gamer"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintLeft_toRightOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saturday_oct_25_2017"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintLeft_toLeftOf="@+id/imageButton2"
                app:layout_constraintTop_toBottomOf="@+id/imageButton2"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_02_00_pm_05_30_pm"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintLeft_toLeftOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_250_wasderz"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/dialog_feed_register_confirm_button"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/md_green_800"
                android:text="@string/dialog_confirm_button"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintLeft_toRightOf="@+id/textView11"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/dialog_feed_register_cancel_button"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/md_red_700"
                android:text="@string/dialog_cancel_button"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintLeft_toRightOf="@+id/textView11"
                app:layout_constraintRight_toRightOf="parent"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>